<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="5.20dp"
    >

    <com.example.rhadjni.lifeplanner.MyRecyclerView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="19.20dp"
        android:scrollbars="none"
        android:visibility="invisible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="38.40dp"
        android:layout_marginRight="38.40dp"
        android:layout_marginBottom="38.40dp"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible"
        app:backgroundTint="@color/colorBorder" />

    <TextView
        android:id="@+id/prompter"
        android:layout_width="176dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/emptyincome"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>
